--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tabbed Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages Site</h1>
-    <p>This is a sample website hosted on GitHub Pages.</p>
+    <div class="tabs">
+        <button class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</button>
+        <button class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</button>
+        <button class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</button>
+    </div>
+    <div id="Tab1" class="tabcontent">
+        <h3>Tab 1 Content</h3>
+        <p>This is the content of Tab 1.</p>
+    </div>
+    <div id="Tab2" class="tabcontent">
+        <h3>Tab 2 Content</h3>
+        <p>This is the content of Tab 2.</p>
+    </div>
+    <div id="Tab3" class="tabcontent">
+        <h3>Tab 3 Content</h3>
+        <p>This is the content of Tab 3.</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
