--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="header">
+        <h1>Welcome</h1>
+    </div>
     <div class="tabs">
         <button class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</button>
         <button class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</button>
         <button class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</button>
     </div>
     <div id="Tab1" class="tabcontent">
-        <h3>Tab 1 Content</h3>
-        <p>This is the content of Tab 1.</p>
+        <!-- Content of Tab 1 goes here -->
     </div>
     <div id="Tab2" class="tabcontent">
-        <h3>Tab 2 Content</h3>
-        <p>This is the content of Tab 2.</p>
+        <!-- Content of Tab 2 goes here -->
     </div>
     <div id="Tab3" class="tabcontent">
-        <h3>Tab 3 Content</h3>
-        <p>This is the content of Tab 3.</p>
+        <!-- Content of Tab 3 goes here -->
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
