--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Welcome</h1>
     </div>
     <div class="tabs">
-        <button class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</button>
-        <button class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</button>
-        <button class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</button>
+        <span class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</span>
+        <span class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</span>
+        <span class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</span>
     </div>
     <div id="Tab1" class="tabcontent">
         <!-- Content of Tab 1 goes here -->
@@ -27,4 +27,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
