--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabbed Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+<head><title>angepoetry — writing and musings<title></head>
 <body>
-    <div class="header">
-        <h1>Welcome</h1>
-    </div>
-    <div class="tabs">
-        <span class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</span>
-        <span class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</span>
-        <span class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</span>
-    </div>
-    <div id="Tab1" class="tabcontent">
-        <!-- Content of Tab 1 goes here -->
-    </div>
-    <div id="Tab2" class="tabcontent">
-        <!-- Content of Tab 2 goes here -->
-    </div>
-    <div id="Tab3" class="tabcontent">
-        <!-- Content of Tab 3 goes here -->
-    </div>
-    <script src="script.js"></script>
+<header>
+
+</header>
+<hr>
+<nav>
+<table border ="1">
+<table>
+<tr>
+<td>Home</td>
+<td>Poetry</td>
+<td>Photos</td>
+<td>About Me</td>
+</tr>
+</nav>
 </body>
-</html>
