--- a/index.html
+++ b/index.html
@@ -1,18 +1,105 @@
 <!DOCTYPE html>
-<head><title>angepoetry — writing and musings<title></head>
-<body>
-<header>
+<html>
+<head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device=width, initial-scale=1.0"
+<title></title>
+<style>
+  * {
+    box-sizing: border-box;
+  }
+  
+  .column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+  
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .row .column img {
+    width: 200px;
+    height: 500px;
+    object-fit: cover;
+  }
+
+  p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+footer {
+  margin-top: 20px; /* Adjust as needed */
+  margin-bottom: 20px; /* Adjust as needed */
+  margin-left: 20px; /* Adjust as needed */
+  margin-right: 20px; /* Adjust as needed */
+}
+  </style>
+</head>
+<body>
+
+<header>
+<a href="index.html">
+<img src ="img/logo.png" width =250 height="90" alt="angehuy" title="angehuy">
+</a>
 </header>
+
 <hr>
 <nav>
-<table border ="1">
-<table>
+<table cellspacing="5" cellpadding="5">
 <tr>
-<td>Home</td>
-<td>Poetry</td>
-<td>Photos</td>
-<td>About Me</td>
+<td><a href="index.html">Home</a></td>
+<td><a href="poetry.html">Poetry</a></td>
+<!-- <td><a href="photos.html">Photos</a></td> -->
+<td><a href="about.html">About Me</a></td>
 </tr>
+</table>
 </nav>
+
+<hr>
+
+<h2>About me</h2>
+
+
+<div class="row">
+  
+    <div class="column">
+      <img src="img/me_staring2.jpeg" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="img/me_staring.jpeg" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="img/z.png" style="width:100%">
+    </div>
+  </div>
+
+<p>
+Hi, my name is Angela Huynh! I'm currently study biology and bioinformatics at Georgia Tech. In my free time, <br>
+I devour and write poetry. For me, it is a  vessel of recollection and transformation. My work mainly touches <br>
+on Vietnamese identity and heritage. <br>
+<br>
+On this corner of the internet, I highlight select poetry and photos (for fun). Please don't hesistate to reach <br>
+out to talk about all things related to poetry and more!
+</p>
+
+
+<!--
+<footer>
+    Copyright &copy; angehuy 2024-2025
+</footer>
+-->
+
+
+<br>
+
 </body>
+</html>
