--- a/poetry.html
+++ b/poetry.html
@@ -6,7 +6,7 @@
 <body>
 <header>
 <a href="index.html">
-<img src ="img/logo.png" width =250 height="90" alt="angehuy" title="angehuy">
+<img src ="logo.png" width =250 height="90" alt="angehuy" title="angehuy">
 </a>
 </header>
 <hr>
