--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ Hi, my name is Angela Huynh! I'm currently studying biology and bioinformatics a
 I devour and write poetry. For me, it is a  vessel of recollection and transformation. My work mainly touches <br>
 on Vietnamese identity and heritage. <br>
 <br>
-On this corner of the internet, I highlight select poetry and photos (for fun). Please don't hesitate to reach <br>
-out to talk about all things related to poetry and more!
+On this corner of the internet, I highlight my published works. Please don't hesitate to reach <br>
+out to talk about poetry and more.
 </p>
 
 
