--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ p {
   margin-bottom: 10px;
   margin-left: 20px;
   margin-right: 20px;
+  word-wrap: break-word; /* Allow long words to break and wrap */
 }
 
 footer {
@@ -82,12 +83,7 @@ footer {
   </div>
 
 <p>
-Hi, my name is Angela Huynh! I'm currently study biology and bioinformatics at Georgia Tech. In my free time, <br>
-I devour and write poetry. For me, it is a  vessel of recollection and transformation. My work mainly touches <br>
-on Vietnamese identity and heritage. <br>
-<br>
-On this corner of the internet, I highlight select poetry and photos (for fun). Please don't hesistate to reach <br>
-out to talk about all things related to poetry and more!
+Hi, my name is Angela Huynh! I'm currently study biology and bioinformatics at Georgia Tech. In my free time, I devour and write poetry. For me, it is a vessel of recollection and transformation. My work mainly touches on Vietnamese identity and heritage. On this corner of the internet, I highlight select poetry and photos (for fun). Please don't hesitate to reach out to talk about all things related to poetry and more!
 </p>
 
 
