--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ footer {
 
 <header>
 <a href="index.html">
-<img src="img/logo.png" width="250" height="90" alt="angehuy" title="angehuy">
+<img src="logo.png" width="250" height="90" alt="angehuy" title="angehuy">
 </a>
 </header>
 
@@ -72,18 +72,18 @@ footer {
 <div class="row">
   
     <div class="column">
-      <img src="img/me_staring2.jpeg" style="width:100%">
+      <img src="me_staring2.jpeg" style="width:100%">
     </div>
     <div class="column">
-      <img src="img/me_staring.jpeg" style="width:100%">
+      <img src="me_staring.jpeg" style="width:100%">
     </div>
     <div class="column">
-      <img src="img/z.png" style="width:100%">
+      <img src="z.png" style="width:100%">
     </div>
   </div>
 
 <p>
-Hi, my name is Angela Huynh! I'm currently study biology and bioinformatics at Georgia Tech. In my free time, I devour and write poetry. For me, it is a vessel of recollection and transformation. My work mainly touches on Vietnamese identity and heritage. On this corner of the internet, I highlight select poetry and photos (for fun). Please don't hesitate to reach out to talk about all things related to poetry and more!
+Hi, my name is Angela Huynh! I'm currently studying biology and bioinformatics at Georgia Tech. In my free time, I devour and write poetry. For me, it is a vessel of recollection and transformation. My work mainly touches on Vietnamese identity and heritage. On this corner of the internet, I highlight published works Please don't hesitate to reach out to talk about all things related to poetry and more.
 </p>
 
 
