--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   box-sizing: border-box;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .column {
   float: left;
   width: 33.33%;
@@ -53,7 +59,6 @@ footer {
 </a>
 </header>
 
-<hr>
 <nav>
 <table cellspacing="5" cellpadding="5">
 <tr>
@@ -69,10 +74,9 @@ footer {
 
 <h2>About me</h2>
 
-<hr>
-
-<div class="row">
-  
+<div class="container">
+  <hr>
+  <div class="row">
     <div class="column">
       <img src="me_staring2.jpeg" style="width:100%">
     </div>
@@ -83,21 +87,18 @@ footer {
       <img src="z.png" style="width:100%">
     </div>
   </div>
+  <hr>
+</div>
 
-<hr> 
 <p>
 Hi, my name is Angela Huynh! I'm currently studying biology and bioinformatics at Georgia Tech. In my free time, I devour and write poetry. For me, it is a vessel of recollection and transformation. My work mainly touches on Vietnamese identity and heritage. On this corner of the internet, I highlight published works Please don't hesitate to reach out to talk about all things related to poetry and more.
 </p>
-
 
 <!--
 <footer>
     Copyright &copy; angehuy 2024-2025
 </footer>
 -->
-
-
-<br>
 
 </body>
 </html>
